--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "libraries/Mustache"]
-	path = libraries/Mustache
-	url = git://github.com/bobthecow/mustache.php.git
-[submodule ".\\libraries/PHPZip"]
-	path = .\\libraries/PHPZip
+[submodule "libraries/PHPZip"]
+	path = libraries/PHPZip
 	url = git://github.com/Grandt/PHPZip.git
