--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libraries/PHPZip"]
 	path = libraries/PHPZip
 	url = git://github.com/Grandt/PHPZip.git
+[submodule "libraries/Mustache"]
+	path = libraries/Mustache
+	url = git@github.com:bobthecow/mustache.php.git
